# T_OpenCVProj_createTXTByPath

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  OpenCVExample.sln  OpenCVExample.vcxproj  OpenCVExample.vcxproj.filters  T_OpenCVProj.cpp  T_OpenCVProj.sln  T_OpenCVProj.vcxproj  T_OpenCVProj.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  txt.txt
